--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "nxt-trendz-cart-features",
   "private": true,
   "version": "1.0.0",
-  "homepage": "https://sandeep-456.github.io/Nxt-Trendz",
   "engines": {
     "node": "^10.13 || 12 || 14 || 15",
     "npm": ">=6"
@@ -12,7 +11,6 @@
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.6.2",
     "chalk": "4.1.0",
-    "gh-pages": "6.3.0",
     "history": "5.0.0",
     "js-cookie": "3.0.0",
     "msw": "0.33.0",
@@ -26,6 +24,7 @@
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
+    "gh-pages": "6.3.0",
     "husky": "4.3.8",
     "lint-staged": "10.5.4",
     "npm-run-all": "4.1.5",
@@ -39,9 +38,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix src/",
     "format": "prettier --write \"./src\"",
-    "run-all": "npm-run-all --parallel test lint:fix",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "run-all": "npm-run-all --parallel test lint:fix"
   },
   "lint-staged": {
     "*.js": [
