--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Sandeep-456.github.io/Nxt-Trendz",
   "name": "nxt-trendz-cart-features",
   "private": true,
   "version": "1.0.0",
@@ -33,6 +34,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint .",
